--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
         "axios": "^0.21",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "postcss": "^8.1.14",
+        "video.js": "^7.15.4"
     },
     "dependencies": {
         "sweetalert": "^2.1.2",
